--- a/gitit.cabal
+++ b/gitit.cabal
@@ -145,6 +145,7 @@ Executable           gitit
                      highlighting-kate >= 0.5.0.1 && < 0.6,
                      bytestring,
                      text,
+                     utility-ht >= 0.0.9 && < 0.1,
                      random,
                      network >= 2.1.0.0 && < 2.5,
                      utf8-string >= 0.3 && < 0.4,
