--- a/gitit.cabal
+++ b/gitit.cabal
@@ -118,7 +118,8 @@ Library
     build-depends:   ghc, ghc-paths
     cpp-options:     -D_PLUGINS
   build-depends:     base >= 3, pandoc >= 1.10.0.5 && < 1.11,
-                     pandoc-types >= 1.10 && < 1.11, filepath, safe
+                     pandoc-types >= 1.10 && < 1.11, filepath, safe,
+                     utility-ht >= 0.0.9 && < 0.1
   extensions:        CPP
   if impl(ghc >= 6.12)
     ghc-options:     -Wall -fno-warn-unused-do-bind
@@ -145,7 +146,6 @@ Executable           gitit
                      highlighting-kate >= 0.5.0.1 && < 0.6,
                      bytestring,
                      text,
-                     utility-ht >= 0.0.9 && < 0.1,
                      random,
                      network >= 2.1.0.0 && < 2.5,
                      utf8-string >= 0.3 && < 0.4,
